# gisma_Computer_Programming_project

./: .gitignore  README.md  main.py  pyproject.toml  re.txt  script_create_db.sh
app/: main.py  nohup.out
app/handlers/: config_handlers.py  handlers.py  recommendation.py
app/models/: base_model.py  models.py  user.py
app/myenv/: pyvenv.cfg
app/routes/: api.py  views.py
app/services/: database.py  http_client.py
app/swagger/: create-business-travel.yml  create-energy-usage-handler.yml  create-report-handler.yml  create-user-handler.yml  create-waste-sector.yml  create_energy_usage_handler.yml  create_user_handler.yml  get-business-travel.yml  get-energy-usage-handler.yml  get-waste-sector.yml  get_energy_usage_handler.yml  give-recommendation.yml
app/templates/: constans.py  recommendation_business.txt  recommendation_energy_usage.txt  recommendation_waste.txt
myenv/: pyvenv.cfg
tests/: api-tests.http
