[tool.poetry]
name = "co2-reduction"
version = "1.0.0"
description = "Python web project, providing insights and best practices for addressing CO2 emissions reduction"
authors = ["Aleksandr Pakhomovskii <pakhomovskii@gmail.com>"]
license = "CC-BY-SA-4.0"
readme = "README.md"
packages = [{include = "co2_reduction"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
aiohttp-swagger = "^1.0.16"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
